resources/image-builder/stage/image-builder-composer.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: image-builder-composer
  name: image-builder-composer-route
spec:
  host: s66hwsqb07woxyt.api.stage.openshift.com
  port:
    targetPort: composer-api
  to:
    kind: Service
    name: image-builder-composer
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
